# nagaspilot

./: .gitmodules  CHANGELOGS.md  CMakeCache.txt  CMakeLists.txt  DATACLASS_FIX.md  Makefile  NAGASPILOT_README.md  README.md  cmake_install.cmake  comprehensive_failsafe_audit.md  dcp_modify_plan.md  dlp_modify_plan.md  leftout.md  ui_status_report.md
.claude/: settings.local.json
cereal/: custom.capnp
common/: params_keys.h
common/tests/: test_params.py
control/op_controls_adapter/: setup.cfg
docs/: NAGASPILOT_SAFETY.md  model_report.md
docs/plans/: dcp_critical_fixes_plan.md  dcp_migration_plan.md  dlp_migration_plan.md  fullcheck_migration_plan.md  mtsc_migration_plan.md  new_features_list.md  new_features_planning.md  np_migration_plan.md  panel_migration_plan.md  structure_consolidation_plan.md  ui_smoothness_plan.md
docs/reports/: AEM_feature_report.md  NVM_report.md  alert_report.md  comprehensive_cross_check_summary.md  controlsd_telemetry_integration_update.md  dcp_feature_report.md  dcp_implementation_analysis.md  dlp_2nd_completion_summary.md  dragonpilot_link_report.md  fullcheck_migration_critical_findings.md  fullcheck_migration_execution.md  gcf_integration_plan.md  gcf_integration_track.md  lcs_extract_report.md  openpilot_link_report.md  reboot_analysis_report.md  stock_comparision_report.md  sunny_comparision_report.md
docs/tracks/: brand_removal_migration.md  dcp_1st_migration.md  dcp_crosscheck_report.md  dcp_migration_track.md  display_ui_simplify.md  dlp_1st_migration.md  dlp_2nd_migration.md  dlp_migration_track.md  mtsc_migration_track.md  np_1st_migration.md  np_2nd_migration.md  panel_1st_migration.md  ui_smoothness_migration.md
model/op_model_adapter/: setup.cfg
op_core_msgs/: CMakeLists.txt
op_core_msgs/msg/: CanDataArray.msg  ControlsCommand.msg  ControlsDebug.msg  ModelAction.msg  PandaState.msg
porting/: ALL_FEATURES_STATUS.md  DOCUMENTATION_UPDATE_LOG.md  FEATURE_FILES_UPDATE_LOG.md  FINAL_DOCUMENTATION_STATUS.md  SYSTEM_COMPLETION_SUMMARY.md  big_picture_plan.md  big_picture_track.md  dlp_migration_track.md  yolov8_technical_faq.md
porting/DBC/: BYD_Unmapped.md  Byd_Atto3.dbc  (+5 more)
ros2/control/op_controls_adapter/: package.xml  setup.py
ros2/control/op_controls_adapter/op_controls_adapter/: controlsd_to_ros.py
ros2/model/op_model_adapter/: package.xml  setup.py
ros2/op_core_msgs/: package.xml
ros2/op_core_msgs/msg/: CanData.msg
ros2/sensing/can/op_cereal_can_bridge/: package.xml  setup.cfg  setup.py
sensing/can/op_can_bridge/: package.xml  setup.cfg  setup.py
sensing/can/op_can_bridge/op_can_bridge/: bridge_node.py
tools/: bev_plotting_manual.md  cabana_can_analysis_manual.md  camera_streaming_manual.md  debugging_tools_manual.md  features_verify_plan.md  helper_features_report.md  metadrive_manual.md  np_log_analyzer.py  np_log_mapper.py  plotjuggler_analysis_manual.md  remote_control_teleoperation_manual.md  replay_system_manual.md  rerun_visualization_manual.md
(+116 files in other folders)
