<?xml version="1.0"?>
<package format="3">
  <name>op_core_msgs</name>
  <version>0.0.1</version>
  <description>Core message definitions for RK3588 ROS 2 port (CAN, panda state, model, controls).</description>
  <maintainer email="dev@nagasware">nagasware</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>

