<?xml version="1.0"?>
<package format="3">
  <name>op_can_bridge</name>
  <version>0.0.1</version>
  <description>SocketCAN bridge for RK3588 using ROS 2 rclpy, mapping to op_core_msgs.</description>
  <maintainer email="dev@nagasware">nagasware</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>op_core_msgs</exec_depend>
  <exec_depend>python-can</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

